--- a/Beibora_Flip.html
+++ b/Beibora_Flip.html
@@ -99,8 +99,8 @@
       document.querySelectorAll(".flippable").forEach(el => el.style.display = "block");
 
       const dashboards = [
-        { url: "Beibora_Telesales_Statistics.html", duration: 20000 },
-        { url: "Beibora_CRO_Statistics.html", duration: 20000 }
+        { url: "Beibora_Telesales_Statistics.html", duration: 120000 },
+        { url: "Beibora_CRO_Statistics.html", duration: 150000 }
       ];
 
       let index = parseInt(localStorage.getItem("currentDashboardIndex")) || 0;
@@ -124,7 +124,7 @@
         if (timeUpdater) clearInterval(timeUpdater);
         timeUpdater = setInterval(() => {
           overlayTitle.textContent =
-            `BEIBORA_FLIP SALES PERFORMANCE AS AT ${getFormattedTime()} | # OPERATION NIGHT HAMMER`;
+            `BEIBORA FLIP SALES PERFORMANCE AS AT ${getFormattedTime()} | # OPERATION NIGHT HAMMER`;
         }, 1000);
       }
 
@@ -224,5 +224,6 @@
   </div>
 </body>
 </html>
+
 
 
