--- a/Beibora_Flip.html
+++ b/Beibora_Flip.html
@@ -113,16 +113,16 @@
 
       // ✅ Format live clock
       function getFormattedTime() {
-        const now = new Date();
-        return now.toLocaleString('en-GB', {
-          day: '2-digit',
-          month: 'long',
-          year: 'numeric',
-          hour: '2-digit',
-          minute: '2-digit',
-          second: '2-digit'
-        }).replace(',', '');
-      }
+  const now = new Date();
+  return now.toLocaleString('en-GB', {
+    day: '2-digit',
+    month: 'long',      // full month name (e.g., "October")
+    year: 'numeric',
+    hour: '2-digit',
+    minute: '2-digit',
+    second: '2-digit'
+  }).replace(',', '').toUpperCase(); // 🔥 converts everything to uppercase
+}
 
       // ✅ Update banner title every second
       function startLiveClock() {
@@ -250,4 +250,5 @@
   </div>
 </body>
 </html>
+
 
