--- a/Pharma_Flip.html
+++ b/Pharma_Flip.html
@@ -112,17 +112,17 @@
       let lastCheck = null;
 
       // ✅ Format live clock
-      function getFormattedTime() {
-        const now = new Date();
-        return now.toLocaleString('en-GB', {
-          day: '2-digit',
-          month: 'long',
-          year: 'numeric',
-          hour: '2-digit',
-          minute: '2-digit',
-          second: '2-digit'
-        }).replace(',', '');
-      }
+    function getFormattedTime() {
+  const now = new Date();
+  return now.toLocaleString('en-GB', {
+    day: '2-digit',
+    month: 'long',      // full month name (e.g., "October")
+    year: 'numeric',
+    hour: '2-digit',
+    minute: '2-digit',
+    second: '2-digit'
+  }).replace(',', '').toUpperCase(); // 🔥 converts everything to uppercase
+}
 
       // ✅ Update banner title every second
       function startLiveClock() {
