--- a/Beibora_Flip_Updated.html
+++ b/Beibora_Flip_Updated.html
@@ -137,7 +137,7 @@
             second: "2-digit"
           }).replace(",", "");
           bannerTitle.textContent =
-            `BEIBORA FLIP UPDATED SALES PERFORMANCE AS AT ${now} | # OPERATION NIGHT HAMMER`;
+            `BEIBORA CRO FLIP UPDATED SALES PERFORMANCE AS AT ${now} | # OPERATION NIGHT HAMMER`;
         };
         update();
         setInterval(update, 1000);
