--- a/Beibora_Telesales_Statistics.html
+++ b/Beibora_Telesales_Statistics.html
@@ -2510,44 +2510,35 @@ color: #333;
 </head>
 <body style="background-color: white;">
 <div id="htmlwidget_container">
-  <div class="datatables html-widget html-fill-item" id="htmlwidget-7ca24ff7d2f4455effdb" style="width:100%;height:auto;"></div>
+  <div class="datatables html-widget html-fill-item" id="htmlwidget-9b03369d926bb78c9afe" style="width:100%;height:auto;"></div>
 </div>
-<script type="application/json" data-for="htmlwidget-7ca24ff7d2f4455effdb">{"x":{"filter":"none","vertical":false,"caption":"<caption style=\"caption-side: top; text-align: center; font-size:24px; font-weight:700;&#10;             text-transform: uppercase; background-color:#FFC0CB; padding:10px;&#10;             width:100%; position:sticky; top:0; z-index:2000;\">\n    <div style='display:flex; align-items:center; justify-content:center; gap:20px; flex-wrap:nowrap;'>\n      <img src='Logo_Beibora.jpg' style='height:60px; width:auto;'>\n      <span style='flex-grow:1; text-align:center;'>BEIBORA LTD TELESALES PERFORMANCE REPORT<\/span>\n      <img src='Logo_Beibora.jpg' style='height:60px; width:auto;'>\n    <\/div>\n    <div id='liveClock' style='font-size:22px; font-weight:700; margin-top:6px;'><\/div>\n  <\/caption>","data":[[1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21],["VALERIE SYOMBUA","ANN KATHAMBI","MACLYNE ATIENO","DAVID NYONGESA","CYNTHIA MUASYA MWIKA","VIRGINIA WAMBUI","PRICILLAR MUTHONI","SUSAN WAITHERERO","VERONICA WAMALWA","DEBORAH KERUBO","FELISTA NDUNGE","LYDIA WANGUI KIAMA","ROSELINE KENDI","CATHERINE MWONGELI","SELPHINE  KEMUNTO","ANTA KARIMI","EMMACULATE OLOO","GODWIN MANDELA","DOREEN MULEMIA","FAITH MWENDE","MOREEN NJERI"],["BEIBOR THK","BEIBOR THK","BEIBORA HQ","BEI RONGAI","BEIBORA HQ","BEIBORA HQ","BEIBORA GI","BEIBORA HQ","BEIBOR THK","BEIBORA HQ","BEI RONGAI","BEIBORA GI","BEIBORA GI","BEIBORA HQ","BEIBORA HQ","BEIBO KITE","BEIBO KITE","BEIBO KITE","BEIBO KITE","BEIBO KITE","BEI RONGAI"],["88%","82%","80%","73%","72%","70%","66%","60%","60%","53%","48%","48%","47%","44%","44%","43%","39%","33%","32%","29%","21%"],["34%","30%","41%","30%","38%","50%","75%","29%","31%","54%","40%","42%","42%","31%","47%","27%","34%","23%","39%","17%","12%"],[88,82,80,73,72,70,66,60,60,53,48,48,47,44,44,43,39,33,32,29,21],[34,30,41,30,38,50,75,29,31,54,40,42,42,31,47,27,34,23,39,17,12]],"container":"<table class=\"stripe hover cell-border\">\n  <thead>\n    <tr>\n      <th>RANK<\/th>\n      <th>SALESPERSON<\/th>\n      <th>BRANCH<\/th>\n      <th>% SCORE<\/th>\n      <th>% CALL<\/th>\n      <th>ScoreNum<\/th>\n      <th>CallNum<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"deferRender":true,"scrollX":true,"scrollY":"100vh","paging":false,"dom":"t","autoWidth":false,"initComplete":"\nfunction(settings, json) {\n  var api = this.api();\n  var container = api.table().container();\n  var header = $(api.table().header());\n  header.css({\n    'background-color': '#00FF00',\n    'font-size':'22px',\n    'font-weight':'700',\n    'white-space':'normal',\n    'vertical-align':'middle'\n  });\n  header.find('th').eq(0).css('text-align','center');\n  header.find('th').eq(1).css('text-align','left');\n  header.find('th').eq(2).css('text-align','left');\n  header.find('th').eq(3).css('text-align','center');\n  header.find('th').eq(4).css('text-align','center');\n\n  var scrollHead = $(container).find('.dataTables_scrollHead');\n  var scrollBody = $(container).find('.dataTables_scrollBody');\n  var headerTable = scrollHead.find('table');\n  var bodyTable = scrollBody.find('table');\n  headerTable.css({'table-layout':'fixed','width':'100%'});\n  bodyTable.css({'table-layout':'fixed','width':'100%'});\n\n  function syncHeaderWidths(){\n    var firstRow = bodyTable.find('tbody tr:first');\n    if (firstRow.length === 0) return;\n    firstRow.find('td').each(function(i, td){\n      var w = $(td).outerWidth();\n      headerTable.find('th').eq(i).css({'width': w + 'px', 'box-sizing':'border-box'});\n    });\n    headerTable.css({'width': bodyTable.outerWidth() + 'px'});\n  }\n  setTimeout(syncHeaderWidths, 150);\n  $(window).on('resize', function(){ setTimeout(syncHeaderWidths, 150); });\n  api.on('draw', function(){ setTimeout(syncHeaderWidths, 150); });\n  api.columns().every(function(){ this.adjust(); });\n}\n","columnDefs":[{"width":"50px","targets":0},{"width":"200px","targets":1},{"width":"420px","targets":2},{"width":"120px","targets":3},{"width":"120px","targets":4},{"visible":false,"targets":[5,6]},{"className":"dt-center","targets":[0,3,4]},{"className":"dt-left","targets":[1,2]},{"className":"dt-right","targets":[5,6]},{"name":"RANK","targets":0},{"name":"SALESPERSON","targets":1},{"name":"BRANCH","targets":2},{"name":"% SCORE","targets":3},{"name":"% CALL","targets":4},{"name":"ScoreNum","targets":5},{"name":"CallNum","targets":6}],"order":[],"orderClasses":false,"rowCallback":"function(row, data, displayNum, displayIndex, dataIndex) {\nvar value=data[0]; $(this.api().cell(row, 0).node()).css({'font-weight':'700','color':'black','font-size':'18px'});\nvar value=data[1]; $(this.api().cell(row, 1).node()).css({'font-weight':'700','color':'black','font-size':'18px'});\nvar value=data[2]; $(this.api().cell(row, 2).node()).css({'font-weight':'700','color':'black','font-size':'18px'});\nvar value=data[3]; $(this.api().cell(row, 3).node()).css({'font-weight':'700','color':'black','font-size':'18px'});\nvar value=data[4]; $(this.api().cell(row, 4).node()).css({'font-weight':'700','color':'black','font-size':'18px'});\nvar value=data[0]; $(this.api().cell(row, 0).node()).css({'background-color':'#FDEBD0'});\nvar value=data[1]; $(this.api().cell(row, 1).node()).css({'background-color':'#D6EAF8'});\nvar value=data[2]; $(this.api().cell(row, 2).node()).css({'background-color':'#D5F5E3','text-align':'left','white-space':'pre-line'});\nvar value=data[5]; $(this.api().cell(row, 3).node()).css({'color':isNaN(parseFloat(value)) ? '' : value <= 60 ? \"red\" : \"blue\",'background-color':'#FCF3CF','text-align':'center'});\nvar value=data[6]; $(this.api().cell(row, 4).node()).css({'background-color':'#FADBD8','text-align':'center'});\n}"}},"evals":["options.initComplete","options.rowCallback"],"jsHooks":[]}</script>
-<script type="application/htmlwidget-sizing" data-for="htmlwidget-7ca24ff7d2f4455effdb">{"viewer":{"width":"100%","height":"auto","padding":15,"fill":true},"browser":{"width":"100%","height":"auto","padding":40,"fill":false}}</script>
+<script type="application/json" data-for="htmlwidget-9b03369d926bb78c9afe">{"x":{"filter":"none","vertical":false,"caption":"<caption style=\"&#10;      caption-side: top;&#10;      background:#f39c12;&#10;      padding:10px 0px;&#10;      position:sticky;&#10;      top:0;&#10;      width:100vw;&#10;      box-sizing:border-box;       /* include padding in width */&#10;      z-index:2000;&#10;    \">\n      <div style='display:flex;align-items:center;justify-content:space-between;width:100%;max-width:100%;padding:0 30px;'>\n        <img src='Logo_Philmed.png' style='height:48px'>\n        <div style='text-align:center;'>\n          <div style='font-size:24px;font-weight:800;'>PHILMED LTD – TELESALES PERFORMANCE DASHBOARD<\/div>\n          <div id='liveClock' style='font-size:18px;margin-top:4px;'><\/div>\n        <\/div>\n        <img src='Logo_Philmed.png' style='height:48px'>\n      <\/div>\n    <\/caption>","data":[[1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21],["VALERIE SYOMBUA","ANN KATHAMBI","MACLYNE ATIENO","DAVID NYONGESA","CYNTHIA MUASYA MWIKA","VIRGINIA WAMBUI","PRICILLAR MUTHONI","SUSAN WAITHERERO","VERONICA WAMALWA","DEBORAH KERUBO","FELISTA NDUNGE","LYDIA WANGUI KIAMA","ROSELINE KENDI","CATHERINE MWONGELI","SELPHINE  KEMUNTO","ANTA KARIMI","EMMACULATE OLOO","GODWIN MANDELA","DOREEN MULEMIA","FAITH MWENDE","MOREEN NJERI"],["88%","82%","80%","73%","72%","70%","66%","60%","60%","53%","48%","48%","47%","44%","44%","43%","39%","33%","32%","29%","21%"],["34%","30%","41%","30%","38%","50%","75%","29%","31%","54%","40%","42%","42%","31%","47%","27%","34%","23%","39%","17%","12%"],[88,82,80,73,72,70,66,60,60,53,48,48,47,44,44,43,39,33,32,29,21],[34,30,41,30,38,50,75,29,31,54,40,42,42,31,47,27,34,23,39,17,12]],"container":"<table class=\"compact stripe\">\n  <thead>\n    <tr>\n      <th>RANK<\/th>\n      <th>SALESPERSON<\/th>\n      <th>% SCORE<\/th>\n      <th>% CALL<\/th>\n      <th>ScoreNum<\/th>\n      <th>CallNum<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"dom":"t","paging":false,"ordering":false,"scrollX":false,"scrollY":"calc(100vh - 180px)","autoWidth":false,"initComplete":"\nfunction(settings, json) {\n  var api = this.api();\n\n  $('html, body').css({\n    margin:0, padding:0, width:'100%', height:'100%', overflow:'hidden'\n  });\n\n  $(api.table().container()).css({ width:'100vw', height:'100vh' });\n\n  // Header row\n  $(api.table().header()).find('th').css({\n    'background':'#18bc9c',\n    'color':'#083b36',\n    'font-size':'20px',\n    'font-weight':'700',\n    'border-bottom':'3px solid #0e6655',\n    'padding':'8px'\n  });\n}\n","columnDefs":[{"width":"70px","targets":0},{"width":"58%","targets":1},{"width":"120px","targets":2},{"width":"120px","targets":3},{"visible":false,"targets":[4,5]},{"className":"dt-center","targets":[0,2,3]},{"className":"dt-left","targets":1},{"className":"dt-right","targets":[4,5]},{"name":"RANK","targets":0},{"name":"SALESPERSON","targets":1},{"name":"% SCORE","targets":2},{"name":"% CALL","targets":3},{"name":"ScoreNum","targets":4},{"name":"CallNum","targets":5}],"order":[],"orderClasses":false,"rowCallback":"function(row, data, displayNum, displayIndex, dataIndex) {\nvar value=data[0]; $(this.api().cell(row, 0).node()).css({'font-size':'17px','border-bottom':'1px solid #d5dbdb'});\nvar value=data[1]; $(this.api().cell(row, 1).node()).css({'font-size':'17px','border-bottom':'1px solid #d5dbdb'});\nvar value=data[2]; $(this.api().cell(row, 2).node()).css({'font-size':'17px','border-bottom':'1px solid #d5dbdb'});\nvar value=data[3]; $(this.api().cell(row, 3).node()).css({'font-size':'17px','border-bottom':'1px solid #d5dbdb'});\nvar value=data[0]; $(this.api().cell(row, 0).node()).css({'font-weight':'700','background-color':'#fdecea'});\nvar value=data[1]; $(this.api().cell(row, 1).node()).css({'font-weight':'600','background-color':'#ecf4fb'});\nvar value=data[4]; $(this.api().cell(row, 2).node()).css({'font-weight':'700','color':isNaN(parseFloat(value)) ? '' : value <= 60 ? \"#c0392b\" : \"#1f618d\",'background-color':'#fef9e7'});\nvar value=data[5]; $(this.api().cell(row, 3).node()).css({'font-weight':'600','background-color':'#fadbd8'});\n}"}},"evals":["options.initComplete","options.rowCallback"],"jsHooks":[]}</script>
+<script type="application/htmlwidget-sizing" data-for="htmlwidget-9b03369d926bb78c9afe">{"viewer":{"width":"100%","height":"auto","padding":15,"fill":true},"browser":{"width":"100%","height":"auto","padding":40,"fill":false}}</script>
 </body>
 </html>
-<script>(function(){
-var speed=2,tickMs=60,waitTimeTop=5000,waitTimeBottom=10000;
-function findContainer(){
-  var c=document.querySelector('.dataTables_scrollBody');
-  if(c){init(c);}else{setTimeout(findContainer,200);}
-}
-function init(c){
-  document.body.style.margin='0';
-  document.body.style.overflow='hidden';
-  var dir=1,id=null;
-  function start(){
-    if(id) return;
-    id=setInterval(function(){
-      c.scrollTop+=dir*speed;
-      if(dir===1 && c.scrollTop+c.clientHeight>=c.scrollHeight-2){
-        clearInterval(id);id=null;dir=-1;setTimeout(start,waitTimeBottom);
-      }else if(dir===-1 && c.scrollTop<=1){
-        clearInterval(id);id=null;dir=1;setTimeout(start,waitTimeTop);
-      }
-    },tickMs);
+<script>
+(function(){
+  function init(){
+    var c=document.querySelector('.dataTables_scrollBody');
+    if(!c){setTimeout(init,200);return;}
+    var dir=1;
+    setInterval(function(){
+      c.scrollTop+=dir*1.1;
+      if(c.scrollTop+c.clientHeight>=c.scrollHeight-1) dir=-1;
+      if(c.scrollTop<=1) dir=1;
+    },70);
   }
-  start();
-}
-document.addEventListener('DOMContentLoaded',findContainer);
-})();</script><script>(function(){
-function tick(){
-  var now=new Date();
-  var opt={weekday:'long',year:'numeric',month:'long',day:'numeric',
-           hour:'2-digit',minute:'2-digit',second:'2-digit',
-           hour12:true,timeZone:'Africa/Nairobi'};
-  var el=document.getElementById('liveClock');
-  if(el) el.innerHTML=now.toLocaleString('en-US',opt).toUpperCase();
-}
-setInterval(tick,1000);tick();
-})();</script>
+  document.addEventListener('DOMContentLoaded',init);
+})();
+</script><script>
+(function(){
+  function tick(){
+    var d=new Date();
+    var opt={weekday:'long',year:'numeric',month:'long',day:'numeric',
+      hour:'2-digit',minute:'2-digit',second:'2-digit',hour12:true,timeZone:'Africa/Nairobi'};
+    var el=document.getElementById('liveClock');
+    if(el) el.innerHTML=d.toLocaleString('en-US',opt).toUpperCase();
+  }
+  setInterval(tick,1000); tick();
+})();
+</script>
